--- a/reactapp/src/styles/Vehicles.css
+++ b/reactapp/src/styles/Vehicles.css
@@ -5,3 +5,15 @@
 .card:hover {
     transform: scale(1.05); 
 }
+
+/* .carousel-item {
+    height: 150px; 
+    overflow: hidden; 
+}
+
+.carousel-item img {
+    width: 100%; 
+    height: 100%; 
+    object-fit: contain; 
+} */
+
