--- a/reactapp/src/styles/Vehicles.css
+++ b/reactapp/src/styles/Vehicles.css
@@ -1,12 +1,19 @@
-.card {
-    transition: transform 0.2s;
-}
+.card .carousel-inner img {
+    max-height: 200px; /* Establece una altura máxima para las imágenes */
+    object-fit: cover; /* Ajusta la imagen para que cubra el contenedor */
+  }
 
-.card:hover {
-    transform: scale(1.05); 
-}
+  /* .card{
+    transition: transform 0.3s;
+  }
 
-/* .carousel-item {
+.card:hover{
+    transform: scale(1.03);
+} */
+
+  
+
+.carousel-item {
     height: 150px; 
     overflow: hidden; 
 }
@@ -15,5 +22,4 @@
     width: 100%; 
     height: 100%; 
     object-fit: contain; 
-} */
-
+}
