--- a/reactapp/src/styles/Login.css
+++ b/reactapp/src/styles/Login.css
@@ -1,7 +1,13 @@
 .login-body {
   background: linear-gradient(to right, #5ab3fc, white);
+  /* background-image: url('../imgs/background1.webp'); */
+  /* background-size: cover; */
   width: 100vw;
-  height: 100vh;
+  height: 90vh;
+}
+
+.login-alert-button{
+  margin-right: 20px;
 }
 
 .login-image {
