--- a/reactapp/src/styles/Home.css
+++ b/reactapp/src/styles/Home.css
@@ -1,13 +1,15 @@
 .alert-container {
   position: fixed; /* o position: absolute; dependiendo de tus necesidades */
-  top: 85px; /* ajusta la posición vertical según tus necesidades */
+  top: 80px; /* ajusta la posición vertical según tus necesidades */
+  left: 10px; /* ajusta la posición horizontal según tus necesidades */
   z-index: 9999; /* asegura que esté por encima de otros elementos */
   width: 100%; /* opcional, ajusta el ancho según sea necesario */
 }
 
 .home-container {
+  padding: 20px;
   width: 100vw;
-  height: 91vh;
+  height: 90vh;
   background: url('../imgs/background-playa.jpg');
   background-size: cover;
 }
@@ -44,13 +46,15 @@
 }
 
 
-/* .home-auth-links {
+
+
+.home-auth-links {
  
 }
 
 .home-rent{
 
-} */
+}
 
 .home-auth-link {
   text-decoration: none;
@@ -65,7 +69,7 @@
   text-decoration: none;
   color: black;
   background-color: white; 
-  padding: 10px 10px;
+  padding: 10px 15px;
   border: 2px solid black;
   border-radius: 15px;
   transition: transform 0.5s;
@@ -73,7 +77,7 @@
 }
 
 .home-rent-link:hover {
-  transform: scale(1.07);
+  transform: scale(1.1);
 }
 
 .home-auth-link:hover {
