Implementación de más filtros

--- a/reactapp/src/styles/Filtros.css
+++ b/reactapp/src/styles/Filtros.css
@@ -1,12 +1,15 @@
 /* Estilos para el contenedor de los botones */
-.filtros-marca-container {
+/* .filtros-marca-container {
     align-items: center;
     display: inline-block;
     display: flex;
     flex-flow: row wrap;
     justify-content: flex-start;
     width: 100%;
-}
+} */
+
+
+
 
 
 /* Estilos para los botones */
