--- a/reactapp/src/styles/Vehicles.css
+++ b/reactapp/src/styles/Vehicles.css
@@ -11,7 +11,6 @@
     transform: scale(1.03);
 } */
 
-  
 
 .carousel-item {
     height: 150px; 
@@ -22,4 +21,14 @@
     width: 100%; 
     height: 100%; 
     object-fit: contain; 
+}
+
+.vehicle-list-ver-mas{
+  color: #1c7abc;
+  border: 3px solid #c7deee;
+}
+
+.vehicle-list-ver-mas:hover{
+  color: #05426d;
+  border: 3px solid #a6becf;
 }
