--- a/reactapp/src/styles/Home.css
+++ b/reactapp/src/styles/Home.css
@@ -11,9 +11,9 @@
   width: 100vw;
   height: 90vh;
   background: url('../imgs/background-playa.jpg');
-  /* background: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)), url('../imgs/background-playa.jpg'); */
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)), url('../imgs/background-playa.jpg');
   background-size: cover;
-  /* background-blend-mode: overlay; */
+  background-blend-mode: overlay;
 }
 
 
