--- a/reactapp/src/styles/Login.css
+++ b/reactapp/src/styles/Login.css
@@ -3,7 +3,7 @@
   /* background-image: url('../imgs/background1.webp'); */
   /* background-size: cover; */
   width: 100vw;
-  height: 90vh;
+  min-height: 90vh;
 }
 
 .login-alert-button{
