--- a/reactapp/src/styles/BuzonMensajes.css
+++ b/reactapp/src/styles/BuzonMensajes.css
@@ -2,31 +2,63 @@
     border-radius: 35px;
 }
 
-.solicitudes-alquiler-btn-rechazar{
+.solicitudes-botones-container{
+    border-radius: 35px;
+}
+
+.solicitudes-activas-btn{
     background-color: #fff;
-    color: rgb(228, 90, 90);
-    border-radius: 25px;
+    color: rgb(92, 90, 228);
+    border-radius: 15px;
     height: 50px;
-    border: 3px solid #eeeeee;
+    border: 3px solid rgb(149, 148, 245);
     font-weight: 700;
     transition: transform 0.3s ease;
 }
 
-.solicitudes-alquiler-btn-rechazar:hover{
+.solicitudes-activas-btn:hover{
     transform: scale(1.08);
 }
 
-.solicitudes-alquiler-btn-aceptar{
+.solicitudes-pendientes-btn{
+    background-color: #fff;
+    color: rgb(122, 122, 122);
+    border-radius: 15px;
+    height: 50px;
+    border: 3px solid #eeeeee;
+    font-weight: 700;
+    transition: transform 0.3s ease;
+}
+
+.solicitudes-pendientes-btn:hover{
+    transform: scale(1.08);
+}
+
+.solicitudes-rechazadas-btn{
+    background-color: #fff;
+    color: rgb(228, 90, 90);
+    border-radius: 15px;
+    height: 50px;
+    border: 3px solid #eeeeee;
+    font-weight: 700;
+    transition: transform 0.3s ease;
+}
+
+.solicitudes-rechazadas-btn:hover{
+    transform: scale(1.08);
+}
+
+.solicitudes-aceptadas-btn{
     background-color: #fff;
     color: #068323;
-    border-radius: 25px;
+    border-radius: 15px;
     font-weight: 700;
     height: 50px;
     border: 3px solid #eeeeee;
     transition: transform 0.3s ease;
 }
 
-.solicitudes-alquiler-btn-aceptar:hover{
+.solicitudes-aceptadas-btn:hover{
     transform: scale(1.08);
     color: #05691c;
 }
