--- a/reactapp/src/styles/Home.css
+++ b/reactapp/src/styles/Home.css
@@ -9,7 +9,7 @@
 .home-container {
   padding: 20px;
   width: 100vw;
-  height: 90vh;
+  min-height: 90vh;
   background: url('../imgs/background-playa.jpg');
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)), url('../imgs/background-playa.jpg');
   background-size: cover;
@@ -18,17 +18,17 @@
 
 .notification-container {
   position: fixed;
-  top: 88px; /* Ajusta esta propiedad según donde quieras que aparezcan las notificaciones */
+  top: 88px;
   left: 10px;
-  z-index: 1050; /* Asegúrate de que el z-index sea alto para que se superpongan */
+  z-index: 1050;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
 }
 
 .notification {
-  margin-bottom: 10px; /* Espacio entre notificaciones */
-  width: 400px; /* Ancho de las notificaciones */
+  margin-bottom: 10px;
+  width: 400px; 
   transition: opacity 0.3s;
 }
 
@@ -40,7 +40,7 @@
   }
 
   .notification {
-      width: 90%; /* Ajusta el ancho para dispositivos móviles */
+      width: 90%; 
   }
 }
 
@@ -52,29 +52,6 @@
   color: aliceblue;
 }
 
-
-/* BUSCADOR UBICACIONES PAGINA PRINCIPAL */
-/* .home-buscador-ubis-container {
-  display: flex;
-  justify-content: center; 
-  align-items: center; 
-  height: 35vh; 
-}
-
-.home-buscador-ubis-container .form-control{
-  border-radius: 20px;
-  width: 450px;
-  height: 50px;
-  margin-bottom: 15px;
-}
-
-.home-buscador-ubis-container .btn-primary{
-  border-radius: 15px;
-  margin-top: 30px;
-  width: 200px;
-  font-size: 18px;
-  margin-left: 260px;
-} */
 
 
 
