cambio de imgs de  .jpg a .webp

--- a/reactapp/src/styles/CrearVehiculoPage.css
+++ b/reactapp/src/styles/CrearVehiculoPage.css
@@ -12,6 +12,6 @@
 }
 
 .rent-car-image {
-    background-image: url('../imgs/serjan-midili-iUy7WArbyI8-unsplash.jpg');
+    background-image: url('../imgs/serjan-midili-iUy7WArbyI8-unsplash.webp');
     background-size: cover;
   }
