--- a/reactapp/src/styles/Login.css
+++ b/reactapp/src/styles/Login.css
@@ -9,6 +9,6 @@
 }
 
 .login-image {
-  background-image: url('../imgs/login.jpeg');
+  background-image: url('../imgs/login.webp');
   background-size: cover;
 }
