--- a/reactapp/src/styles/Home.css
+++ b/reactapp/src/styles/Home.css
@@ -10,7 +10,7 @@
   padding: 20px;
   width: 100vw;
   min-height: 90vh;
-  background: url('../imgs/background-playa.jpg');
+  background: url('../imgs/background-playa.webp');
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)), url('../imgs/background-playa.jpg');
   background-size: cover;
   background-blend-mode: overlay;
