--- a/mysite/ConectaCar/templates/password_reset_email.html
+++ b/mysite/ConectaCar/templates/password_reset_email.html
@@ -4,4 +4,4 @@
 <p><a href="{{ reset_url }}">Restablecer contraseña</a></p>
 <p>Si no solicitaste un restablecimiento de contraseña, puedes ignorar este correo.</p>
 <p>Gracias,</p>
-<p>El equipo de {{ domain }}</p>
+<p>El equipo de ConectaCar</p>
